--- a/_config.yml
+++ b/_config.yml
@@ -74,5 +74,7 @@ theme: material
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:DongFrancis/DongFrancis.github.io.git
+  repo: 
+    github: git@github.com:DongFrancis/DongFrancis.github.io.git
+    coding: git@git.coding.net:AndyFrancis/andyfrancis.coding.me.git
   branch: master
