--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.2.2"
+    "version": "3.3.5"
   },
   "dependencies": {
     "hexo": "^3.2.2",
     "hexo-deployer-git": "^0.2.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "file:node_modules/hexo-generator-feed",
     "hexo-generator-index": "^0.2.0",
+    "hexo-generator-searchdb": "file:node_modules/hexo-generator-searchdb",
     "hexo-generator-tag": "^0.2.0",
     "hexo-helper-qrcode": "^1.0.2",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.11",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "hexo-wordcount": "^2.0.1"
   }
 }
