--- a/_config.yml
+++ b/_config.yml
@@ -79,5 +79,5 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:DongFrancis/DongFrancis.github.io.git
+  repo: git@github.com:AFutureD/AFutureD.github.io.git
 ​  branch: master
